[tool.poetry]
name = "sunset"
version = "0.1.0"
description = ""
authors = ["Suslov Vsevolod <vsevooolod@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
Pillow = "^9.0.0"
psycopg2-binary = "^2.9.3"
djoser = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
